--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -61,6 +61,7 @@ Example of citation~\cite{Biello:2024pgo}.
 \subsubsection{QQ}
 \subsubsection{QQF}
 Example of citation~\cite{Biello:2024pgo}.
+\printbibliography[heading=subbibliography]
 \end{refsection}
 
 \cite{FerrarioRavasio:2024kem}
