added project titles

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -25,6 +25,7 @@
 \usepackage[backend=biber,sorting=none]{biblatex}
 
 \addbibresource{Pheno.bib}
+\input{inc/definitions.tex}
 
 \begin{document}
 
@@ -38,7 +39,7 @@
 % ----------------------------------------------------------------------
 \chapter{Research Activities -- Theory}
 % ----------------------------------------------------------------------
-\section{Novel computational techniques in particle physics and phenomenological applications}
+\section[Phenomenology]{Novel computational techniques in particle physics and phenomenological applications}
 % ----------------------------------------------------------------------
 \begin{Namen}
 Director: Prof. Dr. G. Zanderighi
@@ -46,25 +47,228 @@ Director: Prof. Dr. G. Zanderighi
 Introduction of the group.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection[Event generators]{Event generators}
+\subsection[Event generators at the LHC]{Event generators at the Large Hadron Collider}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-\subsubsection{QQ}
-\subsubsection{QQF}
-Example of citation~\cite{Biello:2024pgo}.
-\end{refsection}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection[Event generators]{Event generators}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{refsection}
-\subsubsection{QQ}
-\subsubsection{QQF}
-Example of citation~\cite{Biello:2024pgo}.
+Section for predictions matched with parton shower in hadron-hadron colliders.
+%
+\subsubsection{B-hadron and jet algorithms}
+\begin{Namen}
+R. Gauld, A. Ratti, M. Wiesemann, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Charm-quark pair production and netrino physics}
+\begin{Namen}
+R. Gauld, T. Giani, A. Mahr, A. Ratti, M. Wiesemann, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{A new class of NNLO+PS predictions with bbZ}
+\begin{Namen}
+M. Wiesemann
+\end{Namen}
+%
+\subsubsection{Higgs production in association with a bottom-quark pair: a flavour-scheme study}
+\begin{Namen}
+C. Biello, A. Sankar, M. Wiesemann, G. Zanderighi
+\end{Namen}
+Example of citation~\cite{Biello:2024pgo} or~\citere{Biello:2024pgo}.
+Example of a figure in~\fig{phenofig:bbH}.
+\begin{figure}[phtb]
+\begin{center}
+\includegraphics[width=0.95\linewidth]{plots/bbH__ptHspectrum.pdf}
+\caption{Example plot.}
+\label{fig:bbH}
+\end{center}
+\end{figure}
+%
+\subsubsection{Off-shell effects in top-quark pair production}
+\begin{Namen}
+C. Biello, C. Signorile-Signorile, M. Wiesemann, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Off-shell studies in tt(+X) processes}
+\begin{Namen}
+G. Pelliccioli
+\end{Namen}
+%
+\subsubsection{N-jettines formulation of \minnlo{}}
+\begin{Namen}
+M. Ebert, M. Wiesemann, G. Zanderighi, S. Zanoli
+\end{Namen}
+%
+\subsubsection{EW NLO+PS}
+\begin{Namen}
+G. Pelliccioli, M. Wiesemann, G. Zanderighi, S. Zanoli
+\end{Namen}
+%
+\subsubsection{Polirised NLO+PS predictions and quantum info}
+\begin{Namen}
+G. Pelliccioli, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Di-Higgs production}
+\begin{Namen}
+F. Garosi, M. Wiesemann, G. Zanderighi
+\end{Namen}
+%
 \printbibliography[heading=subbibliography]
 \end{refsection}
 
-\cite{FerrarioRavasio:2024kem}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection[Pushing the precision in Higgs studies]{Pushing the precision in Higgs studies}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{refsection}
+Space for a nice introduction.
+%
+\subsubsection{VBF $H\rightarrow b\bar{b}$ production}
+\begin{Namen}
+A. Behring, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Two-loop amplitudes for Higgs plus jet}
+\begin{Namen}
+U. Haisch, M. Niggetiedt
+\end{Namen}
+%
+\subsubsection{Exact top-quark mass dependence in Higgs production}
+\begin{Namen}
+M. Niggetiedt
+\end{Namen}
+%
+\subsubsection{Higgs predictions with bottom-quark mass effects}
+\begin{Namen}
+M. Niggetiedt
+\end{Namen}
+%
+\subsubsection{Next-to-soft threshold in \bbH{}}
+\begin{Namen}
+A. Sankar
+\end{Namen}
+%
+\subsubsection{Rapidity distribution of pseudoscalar Higgs}
+\begin{Namen}
+A. Sankar
+\end{Namen}
+%
+\printbibliography[heading=subbibliography]
+\end{refsection}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Tools and methods for higher-order predictions}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{refsection}
+Space for a nice introduction.
+%
+\subsubsection{New formulation of Nested Soft-Collinear Subtraction Scheme}
+\begin{Namen}
+C. Signorile-Signorile
+\end{Namen}
+%
+\subsubsection{LASS: a new subtraction scheme method at NNLO}
+\begin{Namen}
+G. Pelliccioli, A. Ratti, C. Signorile-Signorile
+\end{Namen}
+%
+\subsubsection{Strongly-ordered infrared counterterms from factorisation}
+\begin{Namen}
+C. Signorile-Signorile
+\end{Namen}
+%
+\subsubsection{Soft function at N3LO}
+\begin{Namen}
+M. Delto, C. Wang
+\end{Namen}
+%
+\subsubsection{Reclassifying Feynman Integrals as Special Functions}
+\begin{Namen}
+C. Wang
+\end{Namen}
+%
+\subsubsection{Four-loop renormalisation of pseudoscalar operators}
+\begin{Namen}
+M. Niggetiedt
+\end{Namen}
+%
+\printbibliography[heading=subbibliography]
+\end{refsection}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Not only proton-proton collisions}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{refsection}
+Space for a nice introduction and give me a better title for sure.
+%
+\subsubsection{NNLO+PS prediction for di-jet production at lepton colliders}
+\begin{Namen}
+F. Koenig, R. Schorer, M. Wiesemann, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{NLO+PS predictions for charged-lepton and neutrino induced DIS}
+\begin{Namen}
+R. Gauld, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Strong-coupling constant determination}
+\begin{Namen}
+P. Nason, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Time-like matching conditions at the threshold}
+\begin{Namen}
+C. Biello
+\end{Namen}
+%
+\subsubsection{Mass power corrections for fragmentation functions}
+\begin{Namen}
+F. Ahmadova, R. Gauld
+\end{Namen}
+%
+\subsubsection{Tetraquarks}
+\begin{Namen}
+C. Wang
+\end{Namen}
+%
+\subsubsection{Neutrino content of the muon}
+\begin{Namen}
+F. Garosi
+\end{Namen}
+\printbibliography[heading=subbibliography]
+\end{refsection}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Beyond Standard Model seaches}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{refsection}
+Space for a nice introduction and give me a better title for sure.
+%
+\subsubsection{Polarised NLO+PS predictions in SMEFT}
+\begin{Namen}
+J. Linder, G. Pelliccioli, M. Wiesemann, G. Zanderighi
+\end{Namen}
+%
+\subsubsection{Z+jet SMEFT}
+\begin{Namen}
+R. Gauld, U. Haisch, J. Weiss
+\end{Namen}
+%
+\subsubsection{NNLO+PS VH}
+\begin{Namen}
+R. Gauld, L. Schnell, U. Haisch
+\end{Namen}
+%
+\subsubsection{New collider proposal for dark matter studies}
+\begin{Namen}
+R. Gauld
+\end{Namen}
+%
+\subsubsection{$b\rightarrow s \gamma$ corrections for the physical value of the charm mass}
+\begin{Namen}
+M. Niggetiedt
+\end{Namen}
+%
+\printbibliography[heading=subbibliography]
+\end{refsection}
+
 
 % ----------------------------------------------------------------------
 \clearpage
