done with first iteration of threshold in FF

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -69,7 +69,7 @@ M. Wiesemann
 %
 \subsubsection{Higgs production in association with a bottom-quark pair: a flavour-scheme study}
 \begin{Namen}
-C. Biello, A. Sankar, M. Wiesemann, G. Zanderighi
+C. Biello, R. Gauld, A. Sankar, M. Wiesemann, G. Zanderighi
 \end{Namen}
 Example of citation~\cite{Biello:2024pgo} or~\citere{Biello:2024pgo}.
 Example of a figure in~\fig{phenofig:bbH}.
@@ -217,6 +217,7 @@ P. Nason, G. Zanderighi
 \begin{Namen}
 C. Biello
 \end{Namen}
+Matching threshold conditions are a key ingredient in the DGLAP evolution within the Variable Flavour Number Scheme, governing the effects of crossing a heavy-quark threshold. They represent the final missing process-independent component needed for the NNLO extraction of Fragmentation Functions, which are time-like non-perturbative objects enabling predictions for identified hadrons. In~\citere{Biello:2024zti}, we have extended the formalism along the lines of~\citere{Cacciari:2005ry} for deriving the matching conditions at NNLO QCD, employing matrix elements from electron-positron annihilation. At this perturbative order, light-quark to hadron Fragmentation Functions require a threshold correction, which we have analytically computed. Future studies will focus on completing the set by deriving analytic threshold conditions for the fragmentation of a gluon or a heavy quark.
 %
 \subsubsection{Mass power corrections for fragmentation functions}
 \begin{Namen}
