--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,29 @@
+@article{Cacciari:2005ry,
+    author = "Cacciari, Matteo and Nason, Paolo and Oleari, Carlo",
+    title = "{Crossing heavy-flavor thresholds in fragmentation functions}",
+    eprint = "hep-ph/0504192",
+    archivePrefix = "arXiv",
+    reportNumber = "BICOCCA-FT-05-8, LPTHE-05-09",
+    doi = "10.1088/1126-6708/2005/10/034",
+    journal = "JHEP",
+    volume = "10",
+    pages = "034",
+    year = "2005"
+}
+@article{Biello:2024zti,
+    author = "Biello, Christian and Bonino, Leonardo",
+    title = "{Time-Like heavy-flavour thresholds for fragmentation functions: the light-quark matching condition at NNLO}",
+    eprint = "2407.07623",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2024-126, ZU-TH 37/24",
+    doi = "10.1140/epjc/s10052-024-13532-9",
+    journal = "Eur. Phys. J. C",
+    volume = "84",
+    number = "11",
+    pages = "1192",
+    year = "2024"
+}
 @article{Biello:2024pgo,
     author = "Biello, Christian and Mazzitelli, Javier and Sankar, Aparna and Wiesemann, Marius and Zanderighi, Giulia",
     title = "{Higgs boson production in association with massive bottom quarks at NNLO+PS}",
