--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -77,7 +77,7 @@ Example of a figure in~\fig{phenofig:bbH}.
 \begin{center}
 \includegraphics[width=0.95\linewidth]{plots/bbH__ptHspectrum.pdf}
 \caption{Example plot.}
-\label{fig:bbH}
+\label{phenofig:bbH}
 \end{center}
 \end{figure}
 %
