--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -62,7 +62,7 @@ R. Gauld, A. Ratti, M. Wiesemann, G. Zanderighi
 R. Gauld, T. Giani, A. Mahr, A. Ratti, M. Wiesemann, G. Zanderighi
 \end{Namen}
 %
-\subsubsection{A new class of NNLO+PS predictions with bbZ}
+\subsubsection{Exploring a new class of NNLO+PS predictions with bbZ}
 \begin{Namen}
 M. Wiesemann
 \end{Namen}
@@ -106,7 +106,7 @@ G. Pelliccioli, M. Wiesemann, G. Zanderighi, S. Zanoli
 G. Pelliccioli, G. Zanderighi
 \end{Namen}
 %
-\subsubsection{Di-Higgs production}
+\subsubsection{Di-Higgs production at NNLO+PS}
 \begin{Namen}
 F. Garosi, M. Wiesemann, G. Zanderighi
 \end{Namen}
@@ -159,19 +159,20 @@ A. Sankar
 \begin{refsection}
 Space for a nice introduction.
 %
+\subsubsection{LASS: a subtraction scheme method at NNLO}
+\begin{Namen}
+G. Pelliccioli, A. Ratti, C. Signorile-Signorile
+\end{Namen}
+Include formulation and Strongly-ordered infrared counterterms from factorisation.
+%
 \subsubsection{New formulation of Nested Soft-Collinear Subtraction Scheme}
 \begin{Namen}
 C. Signorile-Signorile
 \end{Namen}
 %
-\subsubsection{LASS: a new subtraction scheme method at NNLO}
+\subsubsection{Four-loop renormalisation of pseudoscalar operators}
 \begin{Namen}
-G. Pelliccioli, A. Ratti, C. Signorile-Signorile
-\end{Namen}
-%
-\subsubsection{Strongly-ordered infrared counterterms from factorisation}
-\begin{Namen}
-C. Signorile-Signorile
+M. Niggetiedt
 \end{Namen}
 %
 \subsubsection{Soft function at N3LO}
@@ -184,11 +185,6 @@ M. Delto, C. Wang
 C. Wang
 \end{Namen}
 %
-\subsubsection{Four-loop renormalisation of pseudoscalar operators}
-\begin{Namen}
-M. Niggetiedt
-\end{Namen}
-%
 \printbibliography[heading=subbibliography]
 \end{refsection}
 
@@ -196,7 +192,7 @@ M. Niggetiedt
 \subsection{Not only proton-proton collisions}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-Space for a nice introduction and give me a better title for sure.
+Space for a nice introduction and give me a better title.
 %
 \subsubsection{NNLO+PS prediction for di-jet production at lepton colliders}
 \begin{Namen}
@@ -217,7 +213,7 @@ P. Nason, G. Zanderighi
 \begin{Namen}
 C. Biello
 \end{Namen}
-Matching threshold conditions are a key ingredient in the DGLAP evolution within the Variable Flavour Number Scheme, governing the effects of crossing a heavy-quark threshold. They represent the final missing process-independent component needed for the NNLO extraction of Fragmentation Functions, which are time-like non-perturbative objects enabling predictions for identified hadrons. In~\citere{Biello:2024zti}, we have extended the formalism along the lines of~\citere{Cacciari:2005ry} for deriving the matching conditions at NNLO QCD, employing matrix elements from electron-positron annihilation. At this perturbative order, light-quark to hadron Fragmentation Functions require a threshold correction, which we have analytically computed. Future studies will focus on completing the set by deriving analytic threshold conditions for the fragmentation of a gluon or a heavy quark.
+Matching threshold conditions are a key ingredient in the DGLAP evolution within the Variable Flavour Number Scheme, governing the effects of crossing a heavy-quark threshold. They represent the final missing process-independent component needed for the NNLO extraction of Fragmentation Functions, which are time-like non-perturbative objects enabling predictions for identified hadrons. In~\citere{Biello:2024zti}, we have extended the formalism along the lines of~\citere{Cacciari:2005ry} for deriving the matching conditions at NNLO QCD, employing matrix elements from electron-positron annihilation. At this perturbative order, light-quark to hadron Fragmentation Functions require a threshold correction, which we have analytically computed. Future studies will focus on completing the set by deriving threshold conditions for the fragmentation of a gluon or a heavy quark.
 %
 \subsubsection{Mass power corrections for fragmentation functions}
 \begin{Namen}
@@ -240,21 +236,21 @@ F. Garosi
 \subsection{Beyond Standard Model seaches}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-Space for a nice introduction and give me a better title for sure.
+Space for a nice introduction.
 %
 \subsubsection{Polarised NLO+PS predictions in SMEFT}
 \begin{Namen}
 J. Linder, G. Pelliccioli, M. Wiesemann, G. Zanderighi
 \end{Namen}
 %
-\subsubsection{Z+jet SMEFT}
-\begin{Namen}
-R. Gauld, U. Haisch, J. Weiss
-\end{Namen}
-%
 \subsubsection{NNLO+PS VH}
 \begin{Namen}
 R. Gauld, L. Schnell, U. Haisch
+\end{Namen}
+%
+\subsubsection{Z+jet SMEFT}
+\begin{Namen}
+R. Gauld, U. Haisch, J. Weiss
 \end{Namen}
 %
 \subsubsection{New collider proposal for dark matter studies}
