--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,18 @@
+@article{Ball:2022qks,
+    author = "Ball, Richard D. and Candido, Alessandro and Cruz-Martinez, Juan and Forte, Stefano and Giani, Tommaso and Hekhorn, Felix and Kudashkin, Kirill and Magni, Giacomo and Rojo, Juan",
+    collaboration = "NNPDF",
+    title = "{Evidence for intrinsic charm quarks in the proton}",
+    eprint = "2208.08372",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "Nikhef 2021-032, Edinburgh 2021/28, TIF-UNIMI-2021-21",
+    doi = "10.1038/s41586-022-04998-2",
+    journal = "Nature",
+    volume = "608",
+    number = "7923",
+    pages = "483--487",
+    year = "2022"
+}
 @article{Cacciari:2005ry,
     author = "Cacciari, Matteo and Nason, Paolo and Oleari, Carlo",
     title = "{Crossing heavy-flavor thresholds in fragmentation functions}",
