Work in the ee ep section

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -192,7 +192,11 @@ C. Wang
 \subsection{Not only proton-proton collisions}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-Space for a nice introduction and give me a better title.
+The application and development of new computational methods and simulation tools has also been pursued for different collider environments, such as those from lepton-hadron or lepton-lepton collisions.
+%
+Scattering processes with an initial-state lepton or leptons introduce different theoretical challenges as compared to that of hadron-hadron collisions, but also offer exciting opportunities to study the properties of the strong force in a relatively clean environment.
+%
+Such developments allow to re-visit the available data from colliders such as HERA and LEP with more precise theoretical simulations and inputs, increase the precision of simulation tools available for active experiments (e.g. IceCube and KM3NeT), and also provide a new level of theoretical precision for future experiments such as the EIC or a potential high-energy $e^+e^-$ collider. 
 %
 \subsubsection{NNLO+PS prediction for di-jet production at lepton colliders}
 \begin{Namen}
@@ -203,6 +207,9 @@ F. Koenig, R. Schorer, M. Wiesemann, G. Zanderighi
 \begin{Namen}
 R. Gauld, G. Zanderighi
 \end{Namen}
+The POWHEG method of matching fixed-order predictions with parton showers at NLO in QCD has been successfully applied to hadron-hadron collisions for a vast range of processes. As a consequence of the genuinely different kinematics encountered in lepton-hadron collisions, substantial extensions to the POWHEX BOX framework had to be undertaken to enable this method to be applied in this new collision environment~\cite{Banfi:2023mhz}.
+The same extensions have also enabled the method to be applied in the case of neutrino-induced collisions~\cite{FerrarioRavasio:2024kem}, which now allow for the fully exclusive simulation of (ultra) high-energy neutrino-nucleon collisions.
+These new (publicly available) tools improve the precision of fully exclusive simulations of lepton-hadron collisions. This has direct implications for past experiments such as HERA, ongoing measurements at forward detectors at the LHC (e.g. Faser$\nu$, FPF) and large volume neutrino experiments (IceCube, KM3NeT, Baikal), as well as forthcoming colliders such as the EIC and proposed next-generation neutrino detectors.
 %
 \subsubsection{Strong-coupling constant determination}
 \begin{Namen}
@@ -219,6 +226,9 @@ Threshold conditions are matching ingredients in the DGLAP evolution within the 
 \begin{Namen}
 F. Ahmadova, R. Gauld
 \end{Namen}
+The theoretical description for scattering processes in which a heavy-flavour hadron is identified are typically based on either a massive or a massless description of the quark fragmentation process. These approaches are applicable at either low- or high-energy scales, and for very simple cases a combination of these methods are possible.
+On-going work in the group also aims to establish a fully differential description of identified hadron production in a general mass variable flavour number scheme. These developments allow for unified description of identified hadron production in complicated scattering processes with jets and identified hadrons.
+These advancements will have important implications for LHC measurements involving heavy-flavour jets, where the standard experimental approach of flavour tagging use the kinematics of identified heavy-flavour hadrons to establish the flavour quantum numbers of jets.
 %
 \subsubsection{Tetraquarks}
 \begin{Namen}
