--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,26 @@
+@article{Banfi:2023mhz,
+    author = {Banfi, Andrea and Ferrario Ravasio, Silvia and J\"ager, Barbara and Karlberg, Alexander and Reichenbach, Felix and Zanderighi, Giulia},
+    title = "{A POWHEG generator for deep inelastic scattering}",
+    eprint = "2309.02127",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2023-152",
+    doi = "10.1007/JHEP02(2024)023",
+    journal = "JHEP",
+    volume = "02",
+    pages = "023",
+    year = "2024"
+}
+@article{FerrarioRavasio:2024kem,
+    author = {Ferrario Ravasio, Silvia and Gauld, Rhorry and J\"ager, Barbara and Karlberg, Alexander and Zanderighi, Giulia},
+    title = "{An event generator for neutrino-induced Deep Inelastic Scattering and applications to neutrino astronomy}",
+    eprint = "2407.03894",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-TH-2024-091, MPP-2024-121",
+    month = "7",
+    year = "2024"
+}
 @article{Ball:2022qks,
     author = "Ball, Richard D. and Candido, Alessandro and Cruz-Martinez, Juan and Forte, Stefano and Giani, Tommaso and Hekhorn, Felix and Kudashkin, Kirill and Magni, Giacomo and Rojo, Juan",
     collaboration = "NNPDF",
