--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -329,7 +329,9 @@ F. Garosi
 \subsection{Beyond Standard Model seaches}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-Space for a nice introduction.
+Searches for physics beyond the Standard Model (BSM) physics remain a major goal of collider physics experiments.
+The sensitivity of many of the conducted searches rely on the availability of precise simulations of signal and background processes, in particular those aiming to observe indirect signals of BSM in terms of (small) deviations of known SM processes or signals of missing energy. 
+The development of such tools are essential for the interpretation of collider data, but can also play a crucial role in the design of future experiments~\cite{Bechtle:2024atq}.
 %
 \subsubsection{Polarised NLO+PS predictions in SMEFT}
 \begin{Namen}
@@ -355,6 +357,10 @@ R. Gauld, U. Haisch, J. Weiss
 \begin{Namen}
 R. Gauld
 \end{Namen}
+The nature of Dark Matter remains an outstanding question in elementary particle physics, with searches only producing negative (or irreproducible) results.
+This suggests to conduct experiments which can probe currently unexplored regions of the parameter space of Dark Matter models.
+The Lohengrin experiment is an example of such a proposal~\cite{Bechtle:2024atq} which aims to perform the fixed-target missing momentum based technique to search for dark-sector particles (the ~GeV energy electron beam is provided by the ELSA Accelerator in Bonn).
+A simulation tool (lohengrin++) has been developed jointly at the MPP (with Uni. Bonn) for the scattering of electrons and nuclear targets for both signals of (light) Dark Matter as well as SM background processes. This tool has already played an important role in the detector design (feasibility study) and will continue to be developed as planning for the experiment continues. An example of a (differential) Signal-to-Background study for a 10~MeV Dark Photon produced in the collision of a 3.2~GeV electron beam incident on Tungsten is shown in Fig.~{X}.
 %
 \subsubsection{$b\rightarrow s \gamma$ corrections for the physical value of the charm mass}
 \begin{Namen}
