started bbH section

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -94,12 +94,12 @@ M. Wiesemann
 \begin{Namen}
 C. Biello, R. Gauld, A. Sankar, M. Wiesemann, G. Zanderighi
 \end{Namen}
-Example of citation~\cite{Biello:2024pgo} or~\citere{Biello:2024pgo}.
-Example of a figure in~\fig{phenofig:bbH}.
+Higgs production associated with bottom quarks (\bbH{}) is a rare production mode at the LHC, serving as an irreducible background in Higgs-pair searches and gaining potential enhancement in BSM scenarios. Precise predictions of this process are important not only for experimental comparisons but also as a theoretical laboratory for studying heavy-quark effects. In processes involving bottom quarks, predictions can be obtained using different approaches to mass effects. In the scheme with five massless flavours (5FS), the bottom-quark component of the proton is perturbatively generated, enabling the resummation of large logarithmic contributions in the bottom mass. This approach treats the bottom quark as a massless parton, allowing for efficient high-order calculations. In~\citere{Biello:2024vdh}, we presented the first NNLO+PS simulation of this process within the massless scheme. For a more detailed description of bottom-quark kinematics, an alternative approach considers the production of massive bottom quarks in the hard scattering process, along with the Higgs boson, with four massless flavours (4FS). While computationally more demanding, this approach retains all mass effects order by order in perturbative QCD. Working in the \minnlo{} framework, which enables NNLO-accurate predictions for heavy-quark pair production in generic kinematics, we accessed the NNLO corrections in the massive scheme and matched them with a parton shower simulation~\cite{Biello:2024pgo}. Strong tensions between the massless and massive schemes in \bbH{} were observed in the past at lower accuracy, whereas a better agreement is found between the two NNLO+PS predictions, as shown in~\fig{phenofig:bbH}. The two schemes capture complementary aspects of bottom-quark dynamics. A generalised mass-variable flavour number scheme is desirable to achieve precise predictions across the full phase space. Using the method developed in~\citere{Gauld:2021zmq}, we are investigating the isolation of mass power corrections within the massive scheme, aiming to incorporate them into the massless prediction. This would allow us to retain the logarithmic resummation benefits of the massless scheme while systematically accounting for missing power corrections.
+
 \begin{figure}[phtb]
 \begin{center}
 \includegraphics[width=0.95\linewidth]{plots/bbH__ptHspectrum.pdf}
-\caption{Example plot.}
+\caption{Transverse spectrum of the Higgs boson produced via the bottom-quark Yukawa interaction at NNLO+PS in the massless (5FS, blue, dotted) and massive (4FS, red, solid) schemes~\cite{Biello:2024pgo}, with an NNLL+NNLO resummation result in the massless scheme (green, dashed).}
 \label{phenofig:bbH}
 \end{center}
 \end{figure}
