--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -75,6 +75,11 @@ processes \cite{Monni2019:whf,MonniXXX}, generalized $2\to 2$ reactions
 (and still only) NNLO+PS method to deal with colour charges in initial and final state.
 %
 \subsubsection{NNLO+PS predictions for B-hadron and b-jet production}
+
+\begin{Namen}
+R. Gauld, J. Mazzitelli, A. Ratti, M. Wiesemann, G. Zanderighi
+\end{Namen}
+
 Based on the previous advancements of the \minnlo{} method,
 we have implemented a new NNLO+PS generator for bottom-quark quark pair ($b\bar b$) production.
 To this end, the previous \minnlo{} implementation in POWHEG-BOX-V2 was ported 
@@ -111,15 +116,22 @@ A preliminary comparison of our \minnlo{} predictions against ATLAS data is give
 \label{fig:bb}
 \end{center}
 \end{figure}
-
-\begin{Namen}
-R. Gauld, J. Mazzitelli, A. Ratti, M. Wiesemann, G. Zanderighi
-\end{Namen}
 %
 \subsubsection{D-meson processes at NNLO+PS \mbox{and prompt neutrino background}}
 \begin{Namen}
 R. Gauld, T. Giani, A. Mahr, A. Ratti, M. Wiesemann, G. Zanderighi
 \end{Namen}
+
+Another important application of the developed \minnlo{} methology is the production
+of a charm-quark pair in hadron--hadron collisions. While this process also receives
+substantial attention by the current LHC experiments, additionally it plays a crucial role in 
+the envisaged forward-physics experiments, in particular FASER. Even more crucially,
+it is source of a major background to neutrino telescopes, such as ICECUBE, namely
+the atmospheric prompt neutrino flux.
+In all cases, the underlying mechanism is to produce charm quarks through the collision
+of hadrons (either in a controlled collider environment or through 
+
+
 %
 \subsubsection[\minnlo{} method for heavy-quark plus colour-singlet production and application to $b\bar{b}Z$ process]{\minnlo{} method for heavy-quark plus colour-singlet production and the \boldmath{$b\bar{b}Z$} process}
 \begin{Namen}
