solved bib problem

--- a/Pheno.bib
+++ b/Pheno.bib
@@ -14,7 +14,7 @@
 }
 @article{Biello:2024vdh,
     author = "Biello, Christian and Sankar, Aparna and Wiesemann, Marius and Zanderighi, Giulia",
-    title = "{NNLO+PS predictions for Higgs production through bottom-quark annihilation with MINNLO$\varvec{_{\text {PS}}}$}",
+    title = "{NNLO+PS predictions for Higgs production through bottom-quark annihilation with MINNLOPS}",
     eprint = "2402.04025",
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
